# packaging_playground

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
src/example_package_reyniel26/: example.py  sample.txt
tests/: test_example.py
