[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "example_package_reyniel26"
version = "0.0.2"
authors = [
  { name="Reyniel Mark Escamillas", email="some@email.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "pylint>=2.15.6",
  "flake8>=5.0.4"
]

[project.optional-dependencies]
tests = [
  "pytest>=7.2.0",
  "pylint>=2.15.6",
  "flake8>=5.0.4"
]

[project.urls]
"Homepage" = "https://github.com/reyniel26/packaging_playground"
"Bug Tracker" = "https://github.com/reyniel26/packaging_playground/issues"

